Bug 396847 - Feed and OpenSearch indicators can disappear due to subresource loads. Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=kreeger, r=murph, sr=smorgan